--- a/html-css/exercicios/ex026/mq001/estilos/tela.css
+++ b/html-css/exercicios/ex026/mq001/estilos/tela.css
@@ -8,12 +8,15 @@
 }
 
 html {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background-color: rgb(255, 255, 255);
+        color: rgb(0, 0, 0);
+
 }
 
 header {
-    background-color: lightgrey;
+    background-color: rgb(155, 155, 155);
+    color: rgb(255, 255, 255);
 }
 
 header h1 {
@@ -22,13 +25,13 @@ header h1 {
 
 menu ul {
     list-style-type: none;
-    background-color: gray;
+    background-color: rgb(99, 99, 99);
 }
 
 menu li {
-    background-color: rgb(43, 43, 43);
-    color: white;
-    display: inline block;
+    background-color: rgb(73, 73, 73);
+    color: rgb(255, 255, 255);
+    display: inline-block;
     padding: 10px;
 }
 
@@ -36,4 +39,4 @@ article {
     width: 600px;
     display: block;
     margin: auto;
-}
+} 
