--- a/html-css/exercicios/ex026/mq004/estilos/media-query.css
+++ b/html-css/exercicios/ex026/mq004/estilos/media-query.css
@@ -2,3 +2,81 @@
 
 /* Todas as demais Midias */
 
+/* Typical Device Breakpoints
+-----------------------------------
+Pequenas telas : ate 600px
+Celulares : 600px a 768px
+Tablets : 768px a 1024px
+Desktops : 1024px q 1200px
+Grandes Telas : 1200px a 1440px
+Extra Grandes Telas : 1440px a 1920px
+*/
+
+@media print {
+
+* {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+main {
+    border: 2px solid black;
+}
+
+main::after {
+    content: 'Essa impressção foi feita em';
+    text-decoration: overline;
+}
+
+main h1 {
+    text-shadow: none;
+    color: black;
+}
+
+img#phone { display: none;}
+img#tablet { display: none;}
+img#print {display: none;}
+img#pc {display: block;}
+img#tv {display: none;}
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+
+body {
+    background-image: url(../imagens/back-tablet.jpg);
+}
+
+img#phone { display: none;}
+img#tablet { display: block;}
+img#print {display: none;}
+img#pc {display: none;}
+img#tv {display: none;}
+
+}
+
+@media screen and (min-width: 992px) and (max-width:1200px) {
+
+body {
+    background-image: url(../imagens/back-pc.jpg);
+}
+
+img#phone { display: none;}
+img#tablet { display: none;}
+img#print {display: none;}
+img#pc {display: block;}
+img#tv {display: none;}
+
+}
+
+@media screen and (min-width: 1200px) {
+
+body {
+    background-image: url(../imagens/back-tv.jpg);
+}
+
+img#phone { display: none;}
+img#tablet { display: none;}
+img#print {display: none;}
+img#pc {display: none;}
+img#tv {display: block;}
+
+}
