--- a/html-css/exercicios/ex026/mq005/style.css
+++ b/html-css/exercicios/ex026/mq005/style.css
@@ -66,7 +66,7 @@ main {
 }
 
 article > h2 {
-    background-color: ;
+    background-color: transparent;
     padding-bottom: 20px;
     text-align: justify;
     text-indent: 20px;
